welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:36: error: Unmatched closing brace '}' ignored here
}
^